# 2D_GAME_PROJECT

./: CMakeLists.txt  ClassDiagram.drawio
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
Classes/Audio/: AudioEngine.cpp  AudioEngine.h
Classes/BaseCharacter/: BaseCharacter.cpp  BaseCharacter.h
Classes/BossSkills/: BossSkillBase.h  BossSkillFactory.cpp  BossSkillFactory.h
Classes/BossSkills/HellBeastSkill/: BombRainbow.cpp  BombRainbow.h  Fortify.cpp  Fortify.h  MultiFireBall.cpp  MultiFireBall.h  Summon.cpp  Summon.h  Unleash.cpp  Unleash.h
Classes/BossSkills/OkyanusSkill/: Burst.cpp  Burst.h  Cure.cpp  Cure.h
Classes/CoinManager/: CoinManager.cpp  CoinManager.h
Classes/DialogueManager/: DialogueManager.cpp  DialogueManager.h
Classes/Enemies/: Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h
Classes/Enemies/Boss/: Boss.cpp  Boss.h  BossFactory.cpp  BossFactory.h  HellBeast.cpp  HellBeast.h  Okyanus.cpp  Okyanus.h  Paradiso.cpp  Paradiso.h
Classes/Enemies/NormalMonster/: Angelos.cpp  Angelos.h  BabySpider.cpp  BabySpider.h  NormalMonster.cpp  NormalMonster.h  NormalMonsterFactory.cpp  NormalMonsterFactory.h  ShadowSentinels.cpp  ShadowSentinels.h  Skeleton.cpp  Skeleton.h  Slime.cpp  Slime.h
Classes/Engine/: Engine.cpp  Engine.h
Classes/Equipment/: BaseEquipment.cpp  BaseEquipment.h  EquipmentFactory.cpp  EquipmentFactory.h
Classes/Equipment/Armor/: ArmorOfKnight.cpp  ArmorOfKnight.h  ChippedArmor.cpp  ChippedArmor.h  HunterArmor.cpp  HunterArmor.h  SoulArmor.cpp  SoulArmor.h
Classes/Equipment/Helmet/: ChippedHelmet.cpp  ChippedHelmet.h  HelmetOfKnight.cpp  HelmetOfKnight.h  SoulHelmet.cpp  SoulHelmet.h
Classes/Equipment/Ring/: ChippedRing.cpp  ChippedRing.h  HunterRing.cpp  HunterRing.h  SoulRing.cpp  SoulRing.h
Classes/Equipment/Shield/: ChippedShield.cpp  ChippedShield.h  KnightShield.cpp  KnightShield.h  SoulShield.cpp  SoulShield.h
Classes/Equipment/Shoe/: ChippedShoe.cpp  ChippedShoe.h  Sneaker.cpp  Sneaker.h  SoulShoe.cpp  SoulShoe.h
Classes/Equipment/Weapon/: ChippedSword.cpp  ChippedSword.h  HunterSword.cpp  HunterSword.h  LongSword.cpp  LongSword.h  SoulSlayerSword.cpp  SoulSlayerSword.h  SwordOfKnight.cpp  SwordOfKnight.h
Classes/Game/: Game.cpp  Game.h
Classes/Inventory/: Inventory.cpp  Inventory.cpp~RF438a0dc8.TMP  Inventory.h  InventoryNode.cpp  InventoryNode.h  SubInventory.cpp  SubInventory.h  UpgradeDetails.cpp  UpgradeDetails.h  UpgradeInventory.cpp  UpgradeInventory.cpp~RF435b0d31.TMP  UpgradeInventory.cpp~RF85cfa540.TMP  UpgradeInventory.cpp~RF89b8adb7.TMP  UpgradeInventory.cpp~RF89d1b148.TMP  UpgradeInventory.cpp~RF92e1ad8a.TMP  UpgradeInventory.cpp~RF9589a968.TMP  UpgradeInventory.cpp~RF99f323b5.TMP  UpgradeInventory.h
Classes/Item/: BaseItem.cpp  BaseItem.h  ItemFactory.cpp  ItemFactory.h  PotionManager.cpp  PotionManager.h
Classes/Item/Comon/: Gold.cpp  Gold.h
Classes/Item/Potion/: HealthPotion.cpp  HealthPotion.h  ManaPotion.cpp  ManaPotion.h  ScrollPaper.cpp  ScrollPaper.h  SpeedPotion.cpp  SpeedPotion.h
Classes/Item/UpgradeEquipment/: Crystal.cpp  Crystal.h  Diamond.cpp  Diamond.h  Emerald.cpp  Emerald.h  Topaz.cpp  Topaz.h
Classes/ItemManager/: ItemManager.h
Classes/Localization/: LocalizationManager.h
Classes/Map/: Map.cpp  Map.h
Classes/MapDecoration/: BloodMoonTower.cpp  BloodMoonTower.h  MapDecoration.cpp  MapDecoration.h  Obelisk.cpp  Obelisk.h
Classes/NPC/: Durin.cpp  Durin.h  NPC.cpp  NPC.h  NPCFactory.cpp  NPCFactory.h  Robert.cpp  Robert.h  ThienAn.cpp  ThienAn.h
Classes/NotificationManager/: NotificationManager.cpp  NotificationManager.h
Classes/Observer/: Observer.h  Subject.h
Classes/Player/: Player.cpp  Player.h
Classes/Quest/: CollectItemQuest.cpp  CollectItemQuest.h  KillBossQuest.cpp  KillBossQuest.h  KillMonsterQuest.cpp  KillMonsterQuest.h  Quest.cpp  Quest.h  QuestManager.cpp  QuestManager.h
Classes/Scenes/: AnimaticScene.cpp  AnimaticScene.h  DiedLayer.cpp  DiedLayer.h  HowToPlayScene.cpp  HowToPlayScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseMenuScene.cpp  PauseMenuScene.h  ScenesManager.cpp  ScenesManager.h  SelectMapLayer.cpp  SelectMapLayer.h  ShopScene.cpp  ShopScene.h  SplashScene.cpp  SplashScene.h  TutorialScene.cpp  TutorialScene.h
Classes/SettingsManager/: HamburgerMenu.cpp  HamburgerMenu.h  SettingsData.cpp  SettingsData.h  SettingsManager.cpp  SettingsManager.h  SettingsManagerInPauseMenu.cpp  SettingsManagerInPauseMenu.h
Classes/Skills/: SkillBase.cpp  SkillBase.h  SkillFactory.cpp  SkillFactory.h  SkillTree.cpp  SkillTree.h
Classes/Skills/Fire/: Fire.cpp  Fire.h  FireBall.cpp  FireBall.h  FireCastA.cpp  FireCastA.h  FireCastB.cpp  FireCastB.h  FireCombust.cpp  FireCombust.h  FireConflagration.cpp  FireConflagration.h  FireEruption.cpp  FireEruption.h  FireFlare.cpp  FireFlare.h  FireProminence.cpp  FireProminence.h  FireScorch.cpp  FireScorch.h  FireSear.cpp  FireSear.h
Classes/Skills/Thunder/: Thunder.cpp  Thunder.h  ThunderBolt.cpp  ThunderBolt.h  ThunderCastA.cpp  ThunderCastA.h  ThunderCastB.cpp  ThunderCastB.h  ThunderCrackle.cpp  ThunderCrackle.h  ThunderCurrent.cpp  ThunderCurrent.h  ThunderDynamo.cpp  ThunderDynamo.h  ThunderFulminationA.cpp  ThunderFulminationA.h  ThunderFulminationB.cpp  ThunderFulminationB.h  ThunderShock.cpp  ThunderShock.h  ThunderSpark.cpp  ThunderSpark.h  ThunderVoltage.cpp  ThunderVoltage.h
Classes/SoundTimeCounter/: Counter.cpp  Counter.h
Classes/State/BossState/: BossAngry.cpp  BossAngry.h  BossAttack.cpp  BossAttack.h  BossDead.cpp  BossDead.h  BossGetHit.cpp  (+14 more)
Classes/TutorialManager/: TutorialManager.cpp  TutorialManager.h
Resources/json/: BasePlayer.json  BaseSkill.json
Resources/map/: MainLev2.0.tsx  candle.plist  catacombsDecorative.tsx  catacombsMainlevbuild.tsx  decorative.tsx  ground_tileset.tsx  lordOfPainTilesets.tsx  portal.tsx  props_sheet.tsx  snow tileset.tsx  teleport_128.tsx  teleport_portal.plist  tilemap0.tmx  tilemap00.tmx  tilemap01.tmx  tilemap02.tmx  tilemap03.tmx  tilemap1.tmx  tilemap3.tmx  tileset.tsx  tilesets1.tsx
(+559 files in other folders)
